kubernetes/apps/base/external-dns.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: registry.k8s.io/external-dns/external-dns:v0.20.0
          args:
            # - --source=traefik-proxy
            - --source=ingress
            - --source=service
            - --provider=cloudflare
            - --policy=upsert-only
            # NOTE: Pihole only supports A/AAAA/CNAME, so we need to prevent trying o create TXT
            # - --registry=noop
            # - --pihole-api-version=6
            # - --pihole-server=http://192.168.1.53
            - --domain-filter=${DOMAIN}
            # - --cloudflare-proxied
            - --txt-prefix=externaldns-
      securityContext:
        fsGroup: 65534
