kubernetes/apps/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: mmo.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-server
                port:
                  number: 80
  tls:
    - hosts:
        - mmo.${DOMAIN}
