kubernetes/apps/base/web-server-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: web-server
  namespace: default
  labels:
    app: web-server
spec:
  ports:
    - name: web-server
      port: 80
      targetPort: 8000
      protocol: TCP
    - name: metrics-server
      port: 81
      targetPort: 8001
      protocol: TCP
  selector:
    app: web-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      serviceAccountName: web-server-sa
      imagePullSecrets:
      - name: zot-registry-credentials
      containers:
        - name: web-server
          image: rejdeboer/web-server:main-74bc879-1763325478 
          resources:
            requests:
              memory: "256Mi"
              cpu: "300m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
            - containerPort: 8001
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-metrics
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: web-server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 8001
    - ports:
        - protocol: TCP
          port: 8000
